--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
-  wakelock: ^0.6.2
+  wakelock_plus: ^1.1.3
   meta: ^1.9.1
   flutter_widget_from_html_core: ^0.14.5+1
   visibility_detector: ^0.4.0+2
